--- a/css/style.nested.css
+++ b/css/style.nested.css
@@ -1023,7 +1023,7 @@ Slick Slider Theme
     font-family: "slick";
     font-size: 20px;
     line-height: 1;
-    color: white;
+    color: #223a5e;
     opacity: 0.75;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale; }
