--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1283,7 +1283,7 @@ $slick-opacity-not-active: 0.25 !default;
         font-family: $slick-font-family;
         font-size: 20px;
         line-height: 1;
-        color: $slick-arrow-color;
+        color: $brand-primary;
         opacity: $slick-opacity-default;
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
