--- a/css/style.nested.css
+++ b/css/style.nested.css
@@ -116,12 +116,10 @@ textarea {
   appearance: none; }
 
 .scorpius-lead-wrap {
-  padding-top: 2em;
-  padding-bottom: 5em; }
+  padding: 5em 2.5em; }
   @media screen and (max-width: 768px) {
     .scorpius-lead-wrap {
-      padding-top: 2em;
-      padding-bottom: 3em; } }
+      padding: 3em 1.5em; } }
 
 .scorpius-lead {
   font-size: 40px;
@@ -686,7 +684,7 @@ Main
   padding: 5em 0; }
   @media screen and (max-width: 768px) {
     #scorpius-feature {
-      padding: 3em 0 2em 0; } }
+      padding: 3em 0; } }
 
 #scorpius-hero {
   background-color: #2e2e2e;
@@ -768,14 +766,12 @@ body.inner-page #scorpius-hero {
 
 #scorpius-main {
   margin-top: 100vh;
-  padding-top: 50px;
   z-index: 102;
   position: relative;
   background: #ccc; }
   @media screen and (max-width: 768px) {
     #scorpius-main {
-      margin-top: 0px;
-      padding-top: 20px; } }
+      margin-top: 0px; } }
 
 body.inner-page #scorpius-main {
   margin-top: 400px; }
@@ -785,51 +781,14 @@ body.inner-page #scorpius-main {
       padding-top: 20px; } }
 
 /**********************************
-Testimonial
-**********************************/
-#scorpius-testimonial {
-  padding: 120px 0;
-  background: #000 url(../images/hero2.jpg) no-repeat center center;
-  background-size: cover; }
-  @media screen and (max-width: 768px) {
-    #scorpius-testimonial {
-      padding: 3em 0; } }
-  #scorpius-testimonial .scorpius-uppercase-heading-lg {
-    color: #ffffff; }
-  #scorpius-testimonial blockquote {
-    padding-left: 0;
-    width: 70%;
-    margin: 0 auto;
-    color: #ffffff;
-    border-left: none;
-    font-size: 2em; }
-    @media screen and (max-width: 768px) {
-      #scorpius-testimonial blockquote {
-        width: 100%;
-        font-size: 35px;
-        line-height: 47px; } }
-    #scorpius-testimonial blockquote p {
-      text-align: center;
-      color: #ffffff; }
-  #scorpius-testimonial .scorpius-testimonial-author {
-    font-size: 18px; }
-  #scorpius-testimonial .scorpius-uppercase-heading-sm {
-    color: #ffffff; }
-
-#scorpius-newsletter {
-  padding: 3em 0; }
-  @media screen and (max-width: 768px) {
-    #scorpius-newsletter {
-      padding: 2em 0; } }
-  #scorpius-newsletter .scorpius-uppercase-heading-sm {
-    color: rgba(0, 0, 0, 0.4); }
-
-/**********************************
 Contact
 **********************************/
 #scorpius-contact {
   background-color: #ccc;
-  padding: 5em 0 2em 0; }
+  padding: 5em 2.5em; }
+  @media screen and (max-width: 992px) {
+    #scorpius-contact {
+      padding: 3em 1.5em !important; } }
 
 #scorpius-contact .contact-item {
   padding: 10px;
@@ -847,9 +806,6 @@ Contact
   font-size: 1.5em;
   margin-top: 40px;
   text-transform: uppercase; }
-
-#scorpius-contact form {
-  padding: 30px 0; }
 
 #scorpius-contact i {
   font-size: 22px;
@@ -962,7 +918,10 @@ Clients Slider
 **********************************/
 #scorpius-clients {
   background-color: #ffffff;
-  padding: 5em 0; }
+  padding: 5em 2.5em; }
+  @media screen and (max-width: 992px) {
+    #scorpius-clients {
+      padding: 3em 1.5em !important; } }
 
 .slick-slider {
   position: relative;
@@ -1439,19 +1398,29 @@ Components
     color: #2e2e2e; }
 
 .btn-primary {
-  background: #223a5e; }
+  background: #223a5e;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out; }
 
 .btn-success {
-  background: #00e195; }
+  background: #00e195;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out; }
 
 .btn-danger {
-  background: #e02745; }
+  background: #e02745;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out; }
 
 .btn-info {
-  background: #819bce; }
+  background: #819bce;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out; }
 
 .btn-warning {
-  background: #ffd042; }
+  background: #ffd042;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out; }
 
 .btn-alt {
   color: #ccc !important; }
@@ -1482,10 +1451,8 @@ Components
   .btn-danger:hover,
   .btn-outline:hover {
     color: #ffffff;
-    -webkit-transition: all 0.3s ease-in-out;
-    transition: all 0.3s ease-in-out;
-    -webkit-transform: scale(0.95);
-    transform: scale(0.95);
+    -webkit-transform: scale(0.95) !important;
+    transform: scale(0.95) !important;
     background-color: #21385a;
     -webkit-box-shadow: 0px 8px 15px #555555;
     box-shadow: 0px 8px 15px #555555; }
@@ -1504,11 +1471,8 @@ Components
   .btn-outline:focus {
     color: #ffffff;
     background-color: #1f3557;
-    -webkit-transition: all 0.15s ease-in-out;
-    -webkit-transition: all 0.1s ease-in-out;
-    transition: all 0.1s ease-in-out;
-    -webkit-transform: scale(0.9);
-    transform: scale(0.9);
+    -webkit-transform: scale(0.9) !important;
+    transform: scale(0.9) !important;
     -webkit-box-shadow: 0px 10px 15px #333333;
     box-shadow: 0px 10px 15px #333333; }
 
@@ -1579,7 +1543,23 @@ Components
 
 /* Feature 2*/
 .scorpius-feature-2 .scorpius-feature-item {
-  margin-bottom: 30px; }
+  margin-bottom: 30px;
+  padding: 0; }
+  .scorpius-feature-2 .scorpius-feature-item .scorpius-feature-card {
+    padding: 30px;
+    margin: 0 20px;
+    -webkit-box-shadow: 8px 11px 35px -10px rgba(0, 0, 0, 0.5);
+    box-shadow: 8px 11px 35px -10px rgba(0, 0, 0, 0.5);
+    -webkit-transition: all ease-in-out .2s;
+    -webkit-transition: all ease-in .3s;
+    -webkit-transition: all ease-in-out .3s;
+    transition: all ease-in-out .3s; }
+    .scorpius-feature-2 .scorpius-feature-item .scorpius-feature-card:hover {
+      -webkit-transform: scale(1.05);
+      transform: scale(1.05); }
+    @media screen and (max-width: 992px) {
+      .scorpius-feature-2 .scorpius-feature-item .scorpius-feature-card {
+        margin: 10px 25px !important; } }
 
 .scorpius-feature-2 .scorpius-feature-title {
   letter-spacing: 2px; }
@@ -1769,6 +1749,7 @@ Components
 
 /* Social Icons */
 .scorpius-social-icons {
+  display: none;
   text-align: center;
   padding: 0;
   margin: 0 0 2em 0; }
@@ -1786,14 +1767,17 @@ Components
 
 /* Pricing Tables */
 .scorpius-team {
-  padding: 80px 0px; }
+  padding: 5em 2.5em; }
+  @media screen and (max-width: 992px) {
+    .scorpius-team {
+      padding: 3em 1.5em !important; } }
   .scorpius-team .scorpius-team-card {
     overflow: hidden;
     margin-bottom: 50px;
     -webkit-box-shadow: 0 1px 10px 2px rgba(0, 0, 0, 0.5);
     box-shadow: 0 1px 10px 2px rgba(0, 0, 0, 0.5);
-    -webkit-transition: all 0.5s ease-in-out;
-    transition: all 0.5s ease-in-out; }
+    -webkit-transition: all ease-in-out .3s;
+    transition: all ease-in-out .3s; }
     .scorpius-team .scorpius-team-card:hover {
       -webkit-transform: scale(1.05);
       transform: scale(1.05);
@@ -1801,12 +1785,7 @@ Components
       box-shadow: 0 2px 10px 3px rgba(0, 0, 0, 0.6); }
     @media screen and (max-width: 992px) {
       .scorpius-team .scorpius-team-card {
-        margin-bottom: 20px !important; } }
-    @media screen and (max-width: 768px) {
-      .scorpius-team .scorpius-team-card {
-        margin-bottom: 20px !important;
-        float: left;
-        width: 100%; } }
+        margin: 25px !important; } }
     .scorpius-team .scorpius-team-card .scorpius-team-card-image img {
       width: 100%; }
     .scorpius-team .scorpius-team-card .scorpius-team-card-body {
