--- a/sass/style.scss
+++ b/sass/style.scss
@@ -162,11 +162,9 @@ textarea {
 }
 
 .scorpius-lead-wrap {
-	padding-top: 2em;
-	padding-bottom: 5em;
+	padding: 5em 2.5em;
 	@media screen and ( max-width: $screen-sm ) {
-		padding-top: 2em;
-		padding-bottom: 3em;
+		padding: 3em 1.5em;
 	}
 }
 .scorpius-lead {
@@ -818,7 +816,7 @@ Main
 	background: $brand-white;
 	padding: 5em 0;
 	@media screen and (max-width: $screen-sm) {
-		padding: 3em 0 2em 0;
+		padding: 3em 0;
 	}
 }
 
@@ -924,13 +922,11 @@ body {
 
 #scorpius-main {
 	margin-top: 100vh;
-	padding-top: 50px;
 	z-index: 102;
 	position: relative;
 	background: $brand-gray;
 	@media screen and (max-width: $screen-sm) {
 		margin-top: 0px;
-		padding-top: 20px;
 	}
 }
 
@@ -947,67 +943,16 @@ body {
 }
 
 
-
-/**********************************
-Testimonial
-**********************************/
-
-#scorpius-testimonial {
-	padding: 120px 0;
-	background: #000 url(../images/hero2.jpg) no-repeat center center;
-	background-size: cover;
-	@media screen and (max-width: $screen-sm) {
-		padding: 3em 0;
-	}
-	.scorpius-uppercase-heading-lg {
-		color: $brand-white;
-	}
-	blockquote {
-		padding-left: 0;
-		width: 70%;
-		margin: 0 auto;
-		color: $brand-white;
-		border-left: none;
-		font-size: 2em;
-		@media screen and (max-width: $screen-sm) {
-			width: 100%;
-			font-size: 35px;
-			line-height: 47px;
-		}
-		p {
-			text-align: center;
-			color: $brand-white;
-		}
-	}
-	.scorpius-testimonial-author {
-		font-size: 18px;
-	}
-	.scorpius-uppercase-heading-sm {
-		color: $brand-white;
-	}
-}
-
-#scorpius-newsletter {
-	padding: 3em 0;
-	// background: $brand-primary;
-	@media screen and (max-width: $screen-sm) {
-		padding: 2em 0;
-	}
-	.scorpius-uppercase-heading-sm {
-		color: rgba(0,0,0,.4);
-	}
-
-}
-
-
-
 /**********************************
 Contact
 **********************************/
 
 #scorpius-contact {
 	background-color: $brand-gray;
-	padding: 5em 0 2em 0;
+	padding: 5em 2.5em;
+	@media screen and (max-width: $screen-md) {
+		padding: 3em 1.5em !important;
+	}
 }
 
 #scorpius-contact .contact-item {
@@ -1030,7 +975,7 @@ Contact
   text-transform: uppercase;
 }
 #scorpius-contact form {
-	padding: 30px 0;
+	// padding: 30px 0;
 }
 #scorpius-contact i {
 	font-size: 22px;
@@ -1184,7 +1129,10 @@ Clients Slider
 **********************************/
 #scorpius-clients {
 	background-color: $brand-white;
-	padding: 5em 0;
+	padding: 5em 2.5em;
+	@media screen and (max-width: $screen-md) {
+		padding: 3em 1.5em !important;
+	}
 }
 
 .slick-slider {
@@ -1837,18 +1785,28 @@ Components
 }
 .btn-primary {
 	background: $brand-primary;
+	-webkit-transition: all 0.3s ease-in-out;
+	transition: all 0.3s ease-in-out;
 }
 .btn-success {
 	background: $brand-success;
+	-webkit-transition: all 0.3s ease-in-out;
+	transition: all 0.3s ease-in-out;
 }
 .btn-danger {
 	background: $brand-danger;
+	-webkit-transition: all 0.3s ease-in-out;
+	transition: all 0.3s ease-in-out;
 }
 .btn-info {
 	background: $brand-info;
+	-webkit-transition: all 0.3s ease-in-out;
+	transition: all 0.3s ease-in-out;
 }
 .btn-warning {
 	background: $brand-warning;
+	-webkit-transition: all 0.3s ease-in-out;
+	transition: all 0.3s ease-in-out;
 }
 .btn-alt {
 	color: $brand-gray !important;
@@ -1874,10 +1832,8 @@ Components
 	        box-shadow: 0px 5px 15px $gray;
 	&:hover {
 		color: $brand-white;
-		-webkit-transition: all 0.3s ease-in-out;
-		transition: all 0.3s ease-in-out;
-		-webkit-transform: scale(0.95);
-		        transform: scale(0.95);
+		-webkit-transform: scale(0.95) !important;
+		        transform: scale(0.95) !important;
 		background-color: darken($brand-primary, 1%);
 		-webkit-box-shadow: 0px 8px 15px $gray;
 		        box-shadow: 0px 8px 15px $gray;
@@ -1885,11 +1841,8 @@ Components
 	&:active, &:focus {
 		color: $brand-white;
 		background-color: darken($brand-primary, 2%);
-		-webkit-transition: all 0.15s ease-in-out;
-		-webkit-transition: all 0.1s ease-in-out;
-		transition: all 0.1s ease-in-out;
-		-webkit-transform: scale(0.90);
-		        transform: scale(0.90);
+		-webkit-transform: scale(0.90) !important;
+		        transform: scale(0.90) !important;
 		-webkit-box-shadow: 0px 10px 15px $gray-dark;
 		        box-shadow: 0px 10px 15px $gray-dark;
 	}
@@ -1987,12 +1940,31 @@ Components
 
 	.scorpius-feature-item {
 		margin-bottom: 30px;
+		padding: 0;
 		// .btn-primary {
 		// 	color: $brand-darker;
 		// 	&:hover {
 		// 		color: white;
 		// 	}
 		// }
+		.scorpius-feature-card {
+			padding: 30px;
+			margin: 0 20px;
+			-webkit-box-shadow: 8px 11px 35px -10px rgba(0, 0, 0, 0.5);
+			        box-shadow: 8px 11px 35px -10px rgba(0, 0, 0, 0.5);
+			-webkit-transition: all ease-in-out .2s;
+			-webkit-transition: all ease-in .3s;
+			-webkit-transition: all ease-in-out .3s;
+			transition: all ease-in-out .3s;
+			&:hover {
+				-webkit-transform: scale(1.05);
+				        transform: scale(1.05);
+			}
+
+			@media screen and (max-width: $screen-md) {
+				margin: 10px 25px !important;
+			}
+		}
 	}
 	.scorpius-feature-title {
 		letter-spacing: 2px;
@@ -2218,6 +2190,7 @@ Components
 
 /* Social Icons */
 .scorpius-social-icons {
+	display: none;
 	text-align: center;
 	padding: 0;
 	margin: 0 0 2em 0;
@@ -2241,29 +2214,27 @@ Components
 /* Pricing Tables */
 .scorpius-team {
 	// background-color: $brand-gray;
-	padding: 80px 0px;
+	padding: 5em 2.5em;
+	@media screen and (max-width: $screen-md) {
+		padding: 3em 1.5em !important;
+	}
 
 	.scorpius-team-card {
 		overflow: hidden;
 		margin-bottom: 50px;
 		-webkit-box-shadow: 0 1px 10px 2px rgba(0, 0, 0, .5);
-						box-shadow: 0 1px 10px 2px rgba(0, 0, 0, .5);
-		@include transition(.5s);
-
+		box-shadow: 0 1px 10px 2px rgba(0, 0, 0, .5);
+		-webkit-transition: all ease-in-out .3s;
+		transition: all ease-in-out .3s;
 		&:hover {
 			-webkit-transform: scale(1.05);
-			        transform: scale(1.05);
+							transform: scale(1.05);
 			-webkit-box-shadow: 0 2px 10px 3px rgba(0, 0, 0, .6);
 			        box-shadow: 0 2px 10px 3px rgba(0, 0, 0, .6);
 		}
 
 		@media screen and (max-width: $screen-md) {
-			margin-bottom: 20px!important;
-		}
-		@media screen and (max-width: $screen-sm) {
-			margin-bottom: 20px!important;
-			float: left;
-			width: 100%;
+			margin: 25px !important;
 		}
 
 		.scorpius-team-card-image img {
